--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <div class="calendar calendar--month-length-31 calendar--start-day-wed">
+  <body class="page">
+    <div class="calendar calendar--month-length--31 calendar--start-day--wed">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
