--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day--ghy calendar--month-length--27">
+    <div class="calendar calendar--start-day--sun calendar--month-length--27">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
