--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,68 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--month-length--31">
+      <div class="day day--start-day--tue"></div>
+
+      <div class="day day--start-day--wed"></div>
+
+      <div class="day day--start-day--thu"></div>
+
+      <div class="day day--start-day--fri"></div>
+
+      <div class="day day--start-day--sat"></div>
+
+      <div class="day day--start-day--sun"></div>
+
+      <div class="day day--start-day--mon"></div>
+
+      <div class="day day--start-day--tue"></div>
+
+      <div class="day day--start-day--wed"></div>
+
+      <div class="day day--start-day--thu"></div>
+
+      <div class="day day--start-day--fri"></div>
+
+      <div class="day day--start-day--sat"></div>
+
+      <div class="day day--start-day--sun"></div>
+
+      <div class="day day--start-day--mon"></div>
+
+      <div class="day day--start-day--tue"></div>
+
+      <div class="day day--start-day--wed"></div>
+
+      <div class="day day--start-day--thu"></div>
+
+      <div class="day day--start-day--fri"></div>
+
+      <div class="day day--start-day--sat"></div>
+
+      <div class="day day--start-day--sun"></div>
+
+      <div class="day day--start-day--mon"></div>
+
+      <div class="day day--start-day--tue"></div>
+
+      <div class="day day--start-day--wed"></div>
+
+      <div class="day day--start-day--thu"></div>
+
+      <div class="day day--start-day--fri"></div>
+
+      <div class="day day--start-day--sat"></div>
+
+      <div class="day day--start-day--sun"></div>
+
+      <div class="day day--start-day--mon"></div>
+
+      <div class="day day--start-day--tue"></div>
+
+      <div class="day day--start-day--wed"></div>
+
+      <div class="day day--start-day--thu"></div>
+    </div>
   </body>
 </html>
