fix selector --start-day--

--- a/src/index.html
+++ b/src/index.html
@@ -7,68 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--month-length--31">
-      <div class="day day--start-day--tue"></div>
-
-      <div class="day day--start-day--wed"></div>
-
-      <div class="day day--start-day--thu"></div>
-
-      <div class="day day--start-day--fri"></div>
-
-      <div class="day day--start-day--sat"></div>
-
-      <div class="day day--start-day--sun"></div>
-
-      <div class="day day--start-day--mon"></div>
-
-      <div class="day day--start-day--tue"></div>
-
-      <div class="day day--start-day--wed"></div>
-
-      <div class="day day--start-day--thu"></div>
-
-      <div class="day day--start-day--fri"></div>
-
-      <div class="day day--start-day--sat"></div>
-
-      <div class="day day--start-day--sun"></div>
-
-      <div class="day day--start-day--mon"></div>
-
-      <div class="day day--start-day--tue"></div>
-
-      <div class="day day--start-day--wed"></div>
-
-      <div class="day day--start-day--thu"></div>
-
-      <div class="day day--start-day--fri"></div>
-
-      <div class="day day--start-day--sat"></div>
-
-      <div class="day day--start-day--sun"></div>
-
-      <div class="day day--start-day--mon"></div>
-
-      <div class="day day--start-day--tue"></div>
-
-      <div class="day day--start-day--wed"></div>
-
-      <div class="day day--start-day--thu"></div>
-
-      <div class="day day--start-day--fri"></div>
-
-      <div class="day day--start-day--sat"></div>
-
-      <div class="day day--start-day--sun"></div>
-
-      <div class="day day--start-day--mon"></div>
-
-      <div class="day day--start-day--tue"></div>
-
-      <div class="day day--start-day--wed"></div>
-
-      <div class="day day--start-day--thu"></div>
+    <div class="calendar calendar--start-day--tue calendar--month-length--31">
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
+      <div class="day"></div>
     </div>
   </body>
 </html>
