--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day-tue calendar--length-month--30">
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-    </div>
+    <ul class="calendar calendar--start-day--tue calendar--month-length--29">
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+    </ul>
   </body>
 </html>
