--- a/src/index.html
+++ b/src/index.html
@@ -7,40 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <div class="page__calendar">
-      <div class="calendar calendar--start-day-mon calendar--month-length-31">
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-      </div>
+    <div class="calendar calendar--start-day--tue calendar--month-length--29">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
