--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
+    <div class="calendar calendar--start-day--fri calendar--month-length--28">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -42,4 +42,3 @@
     </div>
   </body>
 </html>
-_
