--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class= "calendar calendar_start-day-tue calendar_month-length-28">
+    <div class= "calendar calendar--start-day-tue calendar--month-length-28">
       <div class="calendar__cell"></div>
       <div class="calendar__cell"></div>
       <div class="calendar__cell"></div>
