--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--month-lenght--31 calendar--start-day-fry">
-      <div class="day day--1"></div>
+    <div class="calendar calendar--month-lenght--29 calendar--start-day-mon">
+      <div class="day"></div>
       <div class="day"></div>
       <div class="day"></div>
       <div class="day"></div>
