--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day calendar__day-first"></div>
+    <div class="calendar calendar-start-day--wed calendar-month-length--28">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
