--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day-wed calendar--month-length-31">
+    <div class="calendar calendar--start--day--wed calendar--month-length--31">
       <div class="calendar__item"></div>
       <div class="calendar__item"></div>
       <div class="calendar__item"></div>
