--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="calendar calendar--month-length--31">
-        <div class="calendar__day calendar__day--start-day--mon"></div>
+      <div class="calendar calendar--start-day--mon calendar--month-length--31">
+        <div class="calendar__day"></div>
 
         <div class="calendar__day"></div>
 
