--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,72 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main>
+      <div class="calendar">
+        <ul class="calendar__container calendar--start-day--mon calendar--month-length--30">
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+
+          <li class="calendar__day"></li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
