--- a/src/index.html
+++ b/src/index.html
@@ -8,71 +8,69 @@
   </head>
   <body>
     <main>
-      <div class="calendar">
-        <ul class="calendar__container calendar--start-day--mon calendar--month-length--30">
-          <li class="calendar__day"></li>
+      <ul class="calendar calendar--start-day--wed calendar--month-length--30">
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
 
-          <li class="calendar__day"></li>
-        </ul>
-      </div>
+        <li class="calendar__day"></li>
+      </ul>
     </main>
   </body>
 </html>
