--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,39 @@
   </head>
   <body>
     <div class="container">
-      <div class="calendar calendar--start-day--sun calendar--month-length--28">
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-      </div>
+      <ul class="calendar calendar--start-day--sun calendar--month-length--28">
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+      </ul>
     </div>
   </body>
 </html>
