add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div
+     class="celendar
+     celendar--start-day-sun
+     celendar--month-length-29">
+      <ul class="celendar__month">
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+        <li class="celendar__day"></li>
+      </ul>
+    </div>
   </body>
 </html>
