add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,41 +8,39 @@
   </head>
   <body>
     <div
-     class="celendar
-     celendar--start-day-sun
-     celendar--month-length-29">
-      <ul class="celendar__month">
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
-        <li class="celendar__day"></li>
+     class="celendar">
+      <ul class="celendar__month month">
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
+        <li class="month__day"></li>
       </ul>
     </div>
   </body>
