--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   </head>
   <!-- #endregion head -->
   <body>
-    <div class="calendar calendar--start-day--sun calendar--month-length--28">
+    <div class="calendar calendar--start-day--sun calendar--month-length--30">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
