add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <div class="calendar calendar--month-length-28">
-      <div class="calendar__date calendar__date--start-day-fri"></div>
+    <div class="calendar calendar--month-length-29 calendar--start-day-sun">
+      <div class="calendar__date"></div>
       <div class="calendar__date"></div>
       <div class="calendar__date"></div>
       <div class="calendar__date"></div>
