--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day calendar__day--mon calendar__day--1"></div>
-      <div class="calendar__day calendar__day--tue calendar__day--2"></div>
-      <div class="calendar__day calendar__day--wed calendar__day--3"></div>
-      <div class="calendar__day calendar__day--thu calendar__day--4"></div>
-      <div class="calendar__day calendar__day--fri calendar__day--5"></div>
-      <div class="calendar__day calendar__day--sat calendar__day--6"></div>
-      <div class="calendar__day calendar__day--sun calendar__day--7"></div>
-      <div class="calendar__day calendar__day--mon calendar__day--8"></div>
-      <div class="calendar__day calendar__day--tue calendar__day--9"></div>
-      <div class="calendar__day calendar__day--wed calendar__day--10"></div>
-      <div class="calendar__day calendar__day--thu calendar__day--11"></div>
-      <div class="calendar__day calendar__day--fri calendar__day--12"></div>
-      <div class="calendar__day calendar__day--sat calendar__day--13"></div>
-      <div class="calendar__day calendar__day--sun calendar__day--14"></div>
-      <div class="calendar__day calendar__day--mon calendar__day--15"></div>
-      <div class="calendar__day calendar__day--tue calendar__day--16"></div>
-      <div class="calendar__day calendar__day--wed calendar__day--17"></div>
-      <div class="calendar__day calendar__day--thu calendar__day--18"></div>
-      <div class="calendar__day calendar__day--fri calendar__day--19"></div>
-      <div class="calendar__day calendar__day--sat calendar__day--20"></div>
-      <div class="calendar__day calendar__day--sun calendar__day--21"></div>
-      <div class="calendar__day calendar__day--mon calendar__day--22"></div>
-      <div class="calendar__day calendar__day--tue calendar__day--23"></div>
-      <div class="calendar__day calendar__day--wed calendar__day--24"></div>
-      <div class="calendar__day calendar__day--thu calendar__day--25"></div>
-      <div class="calendar__day calendar__day--fri calendar__day--26"></div>
-      <div class="calendar__day calendar__day--sat calendar__day--27"></div>
-      <div class="calendar__day calendar__day--sun calendar__day--28"></div>
-      <div class="calendar__day calendar__day--mon calendar__day--29"></div>
-      <div class="calendar__day calendar__day--tue calendar__day--30"></div>
-      <div class="calendar__day calendar__day--wed calendar__day--31"></div>
-    </div>
+    <ul class="calendar">
+      <li class="calendar__day calendar__day--mon calendar__day--1"></li>
+      <li class="calendar__day calendar__day--tue calendar__day--2"></li>
+      <li class="calendar__day calendar__day--wed calendar__day--3"></li>
+      <li class="calendar__day calendar__day--thu calendar__day--4"></li>
+      <li class="calendar__day calendar__day--fri calendar__day--5"></li>
+      <li class="calendar__day calendar__day--sat calendar__day--6"></li>
+      <li class="calendar__day calendar__day--sun calendar__day--7"></li>
+      <li class="calendar__day calendar__day--mon calendar__day--8"></li>
+      <li class="calendar__day calendar__day--tue calendar__day--9"></li>
+      <li class="calendar__day calendar__day--wed calendar__day--10"></li>
+      <li class="calendar__day calendar__day--thu calendar__day--11"></li>
+      <li class="calendar__day calendar__day--fri calendar__day--12"></li>
+      <li class="calendar__day calendar__day--sat calendar__day--13"></li>
+      <li class="calendar__day calendar__day--sun calendar__day--14"></li>
+      <li class="calendar__day calendar__day--mon calendar__day--15"></li>
+      <li class="calendar__day calendar__day--tue calendar__day--16"></li>
+      <li class="calendar__day calendar__day--wed calendar__day--17"></li>
+      <li class="calendar__day calendar__day--thu calendar__day--18"></li>
+      <li class="calendar__day calendar__day--fri calendar__day--19"></li>
+      <li class="calendar__day calendar__day--sat calendar__day--20"></li>
+      <li class="calendar__day calendar__day--sun calendar__day--21"></li>
+      <li class="calendar__day calendar__day--mon calendar__day--22"></li>
+      <li class="calendar__day calendar__day--tue calendar__day--23"></li>
+      <li class="calendar__day calendar__day--wed calendar__day--24"></li>
+      <li class="calendar__day calendar__day--thu calendar__day--25"></li>
+      <li class="calendar__day calendar__day--fri calendar__day--26"></li>
+      <li class="calendar__day calendar__day--sat calendar__day--27"></li>
+      <li class="calendar__day calendar__day--sun calendar__day--28"></li>
+      <li class="calendar__day calendar__day--mon calendar__day--29"></li>
+      <li class="calendar__day calendar__day--tue calendar__day--30"></li>
+      <li class="calendar__day calendar__day--wed calendar__day--31"></li>
+    </ul>
   </body>
 </html>
