added task layout calendar

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <section class="calendar">
+      <ul class="calendar__list">
+        <li class="calendar__day calendar__day--sat"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+      </ul>
+    </section>
   </body>
 </html>
