error correction layout calendar

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <section class="calendar">
-      <ul class="calendar__list">
-        <li class="calendar__day calendar__day--sat"></li>
+      <ul class="calendar__list calendar__list--start-day-sat calendar__list--month-length-28">
+        <li class="calendar__day"></li>
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
