--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar start-day--mon month-length--31">
+    <div class="calendar calendar__start-day--mon calendar__month-length--31">
     </div>
   </body>
 </html>
