--- a/src/index.html
+++ b/src/index.html
@@ -7,130 +7,99 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
+    <div class="calendar calendar--start-day-mon calendar--month-length-31">
       <div
-        class="calendar__box calendar__box--date-1 calendar__box--start-day-mon">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-2 calendar__box--start-day-tue">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-3 calendar__box--start-day-wed">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-4 calendar__box--start-day-thu">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-5 calendar__box--start-day-fri">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-6 calendar__box--start-day-sat">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-7 calendar__box--start-day-sun">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-8 calendar__box--start-day-mon">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-9 calendar__box--start-day-tue">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-10 calendar__box--start-day-wed ">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-11 calendar__box--start-day-thu">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-12 calendar__box--start-day-fri">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-13 calendar__box--start-day-sat">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-14 calendar__box--start-day-sun">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-15 calendar__box--start-day-mon">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-16 calendar__box--start-day-tue">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-17 calendar__box--start-day-wed">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-18 calendar__box--start-day-thu">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-19 calendar__box--start-day-fri">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-20 calendar__box--start-day-sat">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-21 calendar__box--start-day-sun">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-22 calendar__box--start-day-mon">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-23 calendar__box--start-day-tue">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-24 calendar__box--start-day-wed">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-25 calendar__box--start-day-thu">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-26 calendar__box--start-day-fri">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-27 calendar__box--start-day-sat">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-28 calendar__box--start-day-sun">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-29 calendar__box--month-length-29 calendar__box--start-day-mon">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-30 calendar__box--month-length-30 calendar__box--start-day-tue">
-      </div>
+        class="calendar__day"></div>
 
       <div
-        class="calendar__box calendar__box--date-31 calendar__box--month-length-31 calendar__box--start-day-wed">
-      </div>
+        class="calendar__day"></div>
     </div>
   </body>
 </html>
